5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4137/executions/1723_2502.log
== TEST (2019-05-13 17:14:29) 
-- CODE:
from math import * 
n = int(input("Numero de vezes:"))

r = sqrt(12)

print(r)
-- OUTPUT:
3.4641016151377544
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:20:57) 
-- CODE:
from math import * 
n = int(input("Numero de vezes:"))

r = sqrt(12)
cont = 0
soma = 0
e = 2 #expoente do menos 1#
expoente = 0 #expoente do quociente#
num = 1 #número da equação que vai variar com mais 2#

while(cont<n):
	pi = r + soma
	soma = soma + ((1/(num*(3**expoente)))*(-1**e))
	num = num+2
	expoente = expoente + 1
	e = e+1
	
	
-- OUTPUT:
3.4641016151377544
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:21:18) 
-- CODE:
from math import * 
n = int(input("Numero de vezes:"))

r = sqrt(12)
cont = 0
soma = 0
e = 2 #expoente do menos 1#
expoente = 0 #expoente do quociente#
num = 1 #número da equação que vai variar com mais 2#

while(cont<n):
	pi = r + soma
	soma = soma + ((1/(num*(3**expoente)))*(-1**e))
	num = num+2
	expoente = expoente + 1
	e = e+1
	print(round(pi, 8))
	
	
-- OUTPUT:
3.46410162
2.46410162
2.3529905
2.33076828
2.32547728
2.32410553
2.32373142
2.3236259
2.32359542
2.32358646
2.32358378
2.32358298
2.32358273
2.32358265
2.32358263
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:21:23) 
-- CODE:
from math import * 
n = int(input("Numero de vezes:"))

r = sqrt(12)
cont = 0
soma = 0
e = 2 #expoente do menos 1#
expoente = 0 #expoente do quociente#
num = 1 #número da equação que vai variar com mais 2#

while(cont<n):
	pi = r + soma
	soma = soma + ((1/(num*(3**expoente)))*(-1**e))
	num = num+2
	expoente = expoente + 1
	e = e+1
	print(round(pi, 8))
	
	
-- OUTPUT:
3.46410162
2.46410162
2.3529905
2.33076828
2.32547728
2.32410553
2.32373142
2.3236259
2.32359542
2.32358646
2.32358378
2.32358298
2.32358273
2.32358265
2.32358263
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2.32358262
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:22:01) 
-- CODE:
from math import * 
n = int(input("Numero de vezes:"))

r = sqrt(12)
cont = 0
soma = 0
e = 2 #expoente do menos 1#
expoente = 0 #expoente do quociente#
num = 1 #número da equação que vai variar com mais 2#

while(cont<n):
	pi = r + soma
	soma = soma + ((1/(num*(3**expoente)))*(-1**e))
	num = num+2
	expoente = expoente + 1
	e = e+1
	cont = cont + 1
	print(round(pi, 8))
	
	
-- OUTPUT:
3.46410162
2.46410162
2.3529905
2.33076828
2.32547728
2.32410553
2.32373142
2.3236259
2.32359542
2.32358646
2.32358378
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:22:06) 
-- CODE:
from math import * 
n = int(input("Numero de vezes:"))

r = sqrt(12)
cont = 0
soma = 0
e = 2 #expoente do menos 1#
expoente = 0 #expoente do quociente#
num = 1 #número da equação que vai variar com mais 2#

while(cont<n):
	pi = r + soma
	soma = soma + ((1/(num*(3**expoente)))*(-1**e))
	num = num+2
	expoente = expoente + 1
	e = e+1
	cont = cont + 1
	print(round(pi, 8))
	
	
-- OUTPUT:
3.46410162
2.46410162
2.3529905
2.33076828
2.32547728
2.32410553
2.32373142
2.3236259
2.32359542
2.32358646
2.32358378
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:22:22) 
-- CODE:
from math import * 
n = int(input("Numero de vezes:"))

r = sqrt(12)
cont = 0
soma = 0
e = 2 #expoente do menos 1#
expoente = 0 #expoente do quociente#
num = 1 #número da equação que vai variar com mais 2#

while(cont<n):
	pi = r + soma
	soma = soma + ((1/(num*(3**expoente)))*(-1**e))
	num = num+2
	expoente = expoente + 1
	e = e+1
	cont = cont + 1
	print(round(pi, 8))
	
	
-- OUTPUT:
3.46410162
2.46410162
2.3529905
2.33076828
2.32547728
2.32410553
2.32373142
2.3236259
2.32359542
2.32358646
2.32358378
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:22:45) 
-- CODE:
from math import * 
n = int(input("Numero de vezes:"))

r = sqrt(12)
cont = 0
soma = 0
e = 2 #expoente do menos 1#
expoente = 0 #expoente do quociente#
num = 1 #número da equação que vai variar com mais 2#

while(cont<n):
	pi = r + soma
	soma = soma + ((1/(num*(3**expoente)))*(-1**e))
	num = num+2
	expoente = expoente + 1
	e = e+1
	cont = cont + 1
	print(round(soma, 8))
	
	
-- OUTPUT:
-1.0
-1.11111111
-1.13333333
-1.13862434
-1.13999608
-1.14037019
-1.14047571
-1.14050619
-1.14051516
-1.14051783
-1.14051864
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:23:08) 
-- CODE:
from math import * 
n = int(input("Numero de vezes:"))

r = sqrt(12)
cont = 0
soma = 0
e = 2 #expoente do menos 1#
expoente = 0 #expoente do quociente#
num = 1 #número da equação que vai variar com mais 2#

while(cont<n):
	pi = r + soma
	soma = soma + ((1/(num*(3**expoente)))*(-1**e))
	num = num+2
	expoente = expoente + 1
	e = e+1
	cont = cont + 1
	print(round(soma, 8))
	
	
-- OUTPUT:
-1.0
-1.11111111
-1.13333333
-1.13862434
-1.13999608
-1.14037019
-1.14047571
-1.14050619
-1.14051516
-1.14051783
-1.14051864
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:23:08) 
-- CODE:
from math import * 
n = int(input("Numero de vezes:"))

r = sqrt(12)
cont = 0
soma = 0
e = 2 #expoente do menos 1#
expoente = 0 #expoente do quociente#
num = 1 #número da equação que vai variar com mais 2#

while(cont<n):
	pi = r + soma
	soma = soma + ((1/(num*(3**expoente)))*(-1**e))
	num = num+2
	expoente = expoente + 1
	e = e+1
	cont = cont + 1
	print(round(soma, 8))
	
	
-- OUTPUT:
-1.0
-1.11111111
-1.13333333
-1.13862434
-1.13999608
-1.14037019
-1.14047571
-1.14050619
-1.14051516
-1.14051783
-1.14051864
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:23:14) 
-- CODE:
from math import * 
n = int(input("Numero de vezes:"))

r = sqrt(12)
cont = 0
soma = 0
e = 2 #expoente do menos 1#
expoente = 0 #expoente do quociente#
num = 1 #número da equação que vai variar com mais 2#

while(cont<n):
	pi = r + soma
	soma = soma + ((1/(num*(3**expoente)))*(-1**e))
	num = num+2
	expoente = expoente + 1
	e = e+1
	cont = cont + 1
	print(round(soma, 8))
	
	
-- OUTPUT:
-1.0
-1.11111111
-1.13333333
-1.13862434
-1.13999608
-1.14037019
-1.14047571
-1.14050619
-1.14051516
-1.14051783
-1.14051864
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:23:18) 
-- CODE:
from math import * 
n = int(input("Numero de vezes:"))

r = sqrt(12)
cont = 0
soma = 0
e = 2 #expoente do menos 1#
expoente = 0 #expoente do quociente#
num = 1 #número da equação que vai variar com mais 2#

while(cont<n):
	pi = r + soma
	soma = soma + ((1/(num*(3**expoente)))*(-1**e))
	num = num+2
	expoente = expoente + 1
	e = e+1
	cont = cont + 1
	print(round(soma, 8))
	
	
-- OUTPUT:
-1.0
-1.11111111
-1.13333333
-1.13862434
-1.13999608
-1.14037019
-1.14047571
-1.14050619
-1.14051516
-1.14051783
-1.14051864
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:23:33) 
-- CODE:
from math import * 
n = int(input("Numero de vezes:"))

r = sqrt(12)
cont = 0
soma = 0
e = 2 #expoente do menos 1#
expoente = 0 #expoente do quociente#
num = 1 #número da equação que vai variar com mais 2#

while(cont<n):
	pi = r + soma
	soma = soma + ((1/(num*(3**expoente)))*((-1)**e))
	num = num+2
	expoente = expoente + 1
	e = e+1
	cont = cont + 1
	print(round(soma, 8))
	
	
-- OUTPUT:
1.0
0.88888889
0.91111111
0.90582011
0.90719185
0.90681774
0.90692326
0.90689277
0.90690174
0.90689906
0.90689987
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:23:38) 
-- CODE:
from math import * 
n = int(input("Numero de vezes:"))

r = sqrt(12)
cont = 0
soma = 0
e = 2 #expoente do menos 1#
expoente = 0 #expoente do quociente#
num = 1 #número da equação que vai variar com mais 2#

while(cont<n):
	pi = r + soma
	soma = soma + ((1/(num*(3**expoente)))*((-1)**e))
	num = num+2
	expoente = expoente + 1
	e = e+1
	cont = cont + 1
	print(round(soma, 8))
	
	
-- OUTPUT:
1.0
0.88888889
0.91111111
0.90582011
0.90719185
0.90681774
0.90692326
0.90689277
0.90690174
0.90689906
0.90689987
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:23:42) 
-- CODE:
from math import * 
n = int(input("Numero de vezes:"))

r = sqrt(12)
cont = 0
soma = 0
e = 2 #expoente do menos 1#
expoente = 0 #expoente do quociente#
num = 1 #número da equação que vai variar com mais 2#

while(cont<n):
	pi = r + soma
	soma = soma + ((1/(num*(3**expoente)))*((-1)**e))
	num = num+2
	expoente = expoente + 1
	e = e+1
	cont = cont + 1
	print(round(pi, 8))
	
	
-- OUTPUT:
3.46410162
4.46410162
4.3529905
4.37521273
4.36992172
4.37129346
4.37091935
4.37102487
4.37099439
4.37100335
4.37100068
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:23:46) 
-- CODE:
from math import * 
n = int(input("Numero de vezes:"))

r = sqrt(12)
cont = 0
soma = 0
e = 2 #expoente do menos 1#
expoente = 0 #expoente do quociente#
num = 1 #número da equação que vai variar com mais 2#

while(cont<n):
	pi = r + soma
	soma = soma + ((1/(num*(3**expoente)))*((-1)**e))
	num = num+2
	expoente = expoente + 1
	e = e+1
	cont = cont + 1
	print(round(pi, 8))
	
	
-- OUTPUT:
3.46410162
4.46410162
4.3529905
4.37521273
4.36992172
4.37129346
4.37091935
4.37102487
4.37099439
4.37100335
4.37100068
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:23:53) 
-- CODE:
from math import * 
n = int(input("Numero de vezes:"))

r = sqrt(12)
cont = 0
soma = 0
e = 2 #expoente do menos 1#
expoente = 0 #expoente do quociente#
num = 1 #número da equação que vai variar com mais 2#

while(cont<n):
	pi = r + soma
	soma = soma + ((1/(num*(3**expoente)))*((-1)**e))
	num = num+2
	expoente = expoente + 1
	e = e+1
	cont = cont + 1
	print(round(pi, 8))
	
	
-- OUTPUT:
3.46410162
4.46410162
4.3529905
4.37521273
4.36992172
4.37129346
4.37091935
4.37102487
4.37099439
4.37100335
4.37100068
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:24:11) 
-- CODE:
from math import * 
n = int(input("Numero de vezes:"))

r = sqrt(12)
cont = 0
soma = 0
e = 2 #expoente do menos 1#
expoente = 0 #expoente do quociente#
num = 1 #número da equação que vai variar com mais 2#

while(cont<n):
	pi = r + soma
	soma = soma + ((1/(num*(3**expoente)))*((-1)**e))
	num = num+2
	expoente = expoente + 1
	e = e+1
	cont = cont + 1
	print(round(soma, 8))
	
	
-- OUTPUT:
1.0
0.88888889
0.91111111
0.90582011
0.90719185
0.90681774
0.90692326
0.90689277
0.90690174
0.90689906
0.90689987
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:24:24) 
-- CODE:
from math import * 
n = int(input("Numero de vezes:"))

r = sqrt(12)
cont = 0
soma = 0
e = 2 #expoente do menos 1#
expoente = 0 #expoente do quociente#
num = 1 #número da equação que vai variar com mais 2#

while(cont<n):
	pi = r + soma
	soma = soma + ((1/(num*(3**expoente)))*((-1)**e))
	num = num+2
	expoente = expoente + 1
	e = e + 1
	cont = cont + 1
	print(round(soma, 8))
	
	
-- OUTPUT:
1.0
0.88888889
0.91111111
0.90582011
0.90719185
0.90681774
0.90692326
0.90689277
0.90690174
0.90689906
0.90689987
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:24:29) 
-- CODE:
from math import * 
n = int(input("Numero de vezes:"))

r = sqrt(12)
cont = 0
soma = 0
e = 2 #expoente do menos 1#
expoente = 0 #expoente do quociente#
num = 1 #número da equação que vai variar com mais 2#

while(cont<n):
	pi = r + soma
	soma = soma + ((1/(num*(3**expoente)))*((-1)**e))
	num = num+2
	expoente = expoente + 1
	e = e + 1
	cont = cont + 1
	print(round(soma, 8))
	
	
-- OUTPUT:
1.0
0.88888889
0.91111111
0.90582011
0.90719185
0.90681774
0.90692326
0.90689277
0.90690174
0.90689906
0.90689987
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:24:38) 
-- CODE:
from math import * 
n = int(input("Numero de vezes:"))

r = sqrt(12)
cont = 0
soma = 0
e = 2 #expoente do menos 1#
expoente = 0 #expoente do quociente#
num = 1 #número da equação que vai variar com mais 2#

while(cont<n):
	pi = r + soma
	soma = soma + ((1/(num*(3**expoente)))*((-1)**e))
	num = num+2
	expoente = expoente + 1
	e = e + 1
	cont = cont + 1
	print(round(soma, 8))
	
	
-- OUTPUT:
1.0
0.88888889
0.91111111
0.90582011
0.90719185
0.90681774
0.90692326
0.90689277
0.90690174
0.90689906
0.90689987
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:26:58) 
-- CODE:
from math import * 
n = int(input("Numero de vezes:"))

r = sqrt(12)
cont = 0
soma = 0
e = 2 #expoente do menos 1#
expoente = 0 #expoente do quociente#
num = 1 #número da equação que vai variar com mais 2#

while(cont<n):
	pi = r + soma
	soma = soma + ((1/(num*(3**expoente)))*((-1)**e))
	num = num+2
	expoente = expoente + 1
	e = e + 1
	cont = cont + 1
	print(round(num, 8))
	
	
-- OUTPUT:
3
5
7
9
11
13
15
17
19
21
23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:27:11) 
-- CODE:
from math import * 
n = int(input("Numero de vezes:"))

r = sqrt(12)
cont = 0
soma = 0
e = 2 #expoente do menos 1#
expoente = 0 #expoente do quociente#
num = 1 #número da equação que vai variar com mais 2#

while(cont<n):
	pi = r + soma
	soma = soma + ((1/(num*(3**expoente)))*((-1)**e))
	num = num+2
	expoente = expoente + 1
	e = e + 1
	cont = cont + 1
	print(round(e, 8))
	
	
-- OUTPUT:
3
4
5
6
7
8
9
10
11
12
13
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:29:40) 
-- CODE:
from math import * 
n = int(input("Numero de vezes:"))

r = sqrt(12)
cont = 0
soma = 0
e = 2 #expoente do menos 1#
expoente = 0 #expoente do quociente#
num = 1 #número da equação que vai variar com mais 2#

while(cont<n):
	pi = r + soma
	soma = soma + ((1/(num*(3**expoente)))*((-1) ** e))
	x = ((-1) ** e)
	num = num+2
	expoente = expoente + 1
	e = e + 1
	cont = cont + 1
	print(round(e, 8))
	
	
-- OUTPUT:
3
4
5
6
7
8
9
10
11
12
13
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:29:47) 
-- CODE:
from math import * 
n = int(input("Numero de vezes:"))

r = sqrt(12)
cont = 0
soma = 0
e = 2 #expoente do menos 1#
expoente = 0 #expoente do quociente#
num = 1 #número da equação que vai variar com mais 2#

while(cont<n):
	pi = r + soma
	soma = soma + ((1/(num*(3**expoente)))*((-1) ** e))
	x = ((-1) ** e)
	num = num+2
	expoente = expoente + 1
	e = e + 1
	cont = cont + 1
	print(round(x, 8))
	
	
-- OUTPUT:
1
-1
1
-1
1
-1
1
-1
1
-1
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:30:09) 
-- CODE:
from math import * 
n = int(input("Numero de vezes:"))

r = sqrt(12)
cont = 0
soma = 0
e = 2 #expoente do menos 1#
expoente = 0 #expoente do quociente#
num = 1 #número da equação que vai variar com mais 2#

while(cont<n):
	pi = r + soma
	soma = soma + ((1/(num*(3**expoente)))*((-1) ** e))
	num = num+2
	expoente = expoente + 1
	e = e + 1
	cont = cont + 1
	print(round(soma, 8))
	
	
-- OUTPUT:
1.0
0.88888889
0.91111111
0.90582011
0.90719185
0.90681774
0.90692326
0.90689277
0.90690174
0.90689906
0.90689987
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:54:29) 
-- CODE:
from math import * 
n = int(input("Numero de vezes:"))

r = sqrt(12)
cont = 0
soma = 0
e = 2 #expoente do menos 1#
expoente = 0 #expoente do quociente#
num = 1 #número da equação que vai variar com mais 2#

while(cont<n):
	pi = r + soma
	soma = soma + ((1/(num*(3**expoente)))*((-1) ** e))
	num = num+2
	expoente = expoente + 1
	e = e + 1
	cont = cont + 1
	print(round(num, 8))
	
	
-- OUTPUT:
3
5
7
9
11
13
15
17
19
21
23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 17:54:29) 
-- CODE:
from math import * 
n = int(input("Numero de vezes:"))

r = sqrt(12)
cont = 0
soma = 0
e = 2 #expoente do menos 1#
expoente = 0 #expoente do quociente#
num = 1 #número da equação que vai variar com mais 2#

while(cont<n):
	pi = r + soma
	soma = soma + ((1/(num*(3**expoente)))*((-1) ** e))
	num = num+2
	expoente = expoente + 1
	e = e + 1
	cont = cont + 1
	print(round(num, 8))
	
	
-- EXECUTION TIME:
0.142074
-- TEST CASE 1:
---- input:
11
---- correct output:
3.1415933
---- user output:
3
5
7
9
11
13
15
17
19
21
23
-- TEST CASE 2:
---- input:
15
---- correct output:
3.14159266
---- user output:
3
5
7
9
11
13
15
17
19
21
23
25
27
29
31
-- TEST CASE 3:
---- input:
8
---- correct output:
3.14156872
---- user output:
3
5
7
9
11
13
15
17
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:54:31) 
-- CODE:
from math import * 
n = int(input("Numero de vezes:"))

r = sqrt(12)
cont = 0
soma = 0
e = 2 #expoente do menos 1#
expoente = 0 #expoente do quociente#
num = 1 #número da equação que vai variar com mais 2#

while(cont<n):
	pi = r + soma
	soma = soma + ((1/(num*(3**expoente)))*((-1) ** e))
	num = num+2
	expoente = expoente + 1
	e = e + 1
	cont = cont + 1
	print(round(num, 8))
	
	
-- OUTPUT:
3
5
7
9
11
13
15
17
19
21
23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:54:49) 
-- CODE:
from math import * 
n = int(input("Numero de vezes:"))

r = sqrt(12)
cont = 0
soma = 0
e = 2 #expoente do menos 1#
expoente = 0 #expoente do quociente#
num = 1 #número da equação que vai variar com mais 2#

while(cont<n):
	pi = r + soma
	soma = soma + ((1/(num*(3**expoente)))*((-1) ** e))
	num = num+2
	expoente = expoente + 1
	e = e + 1
	cont = cont + 1
	print(round(num, 8))
	
	
-- OUTPUT:
3
5
7
9
11
13
15
17
19
21
23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:55:20) 
-- CODE:
from math import * 
n = int(input("Numero de vezes:"))

r = sqrt(12)
cont = 0
soma = 0
e = 2 #expoente do menos 1#
expoente = 0 #expoente do quociente#
num = 1 #número da equação que vai variar com mais 2#

while(cont<n):
	pi = r + soma
	soma = soma + ((1/(num*(3**expoente)))*((-1) ** e))
	expoente = expoente + 1
	e = e + 1
	cont = cont + 1
	print(round(num, 8))
	
	
-- OUTPUT:
1
1
1
1
1
1
1
1
1
1
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:55:32) 
-- CODE:
from math import * 
n = int(input("Numero de vezes:"))

r = sqrt(12)
cont = 0
soma = 0
e = 2 #expoente do menos 1#
expoente = 0 #expoente do quociente#
num = 1 #número da equação que vai variar com mais 2#

while(cont<n):
	pi = r + soma
	soma = soma + ((1/(num*(3**expoente)))*((-1) ** e))
	expoente = expoente + 1
	e = e + 1
	cont = cont + 1
	num = num + 2
	print(round(num, 8))
	
	
-- OUTPUT:
3
5
7
9
11
13
15
17
19
21
23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:56:51) 
-- CODE:
from math import * 
n = int(input("Numero de vezes:"))

r = sqrt(12)
cont = 0
soma = 0
e = 2 #expoente do menos 1#
expoente = 0 #expoente do quociente#
num = 1 #número da equação que vai variar com mais 2#

while(cont<n):
	pi = r + soma
	soma = soma + ((1/(num*(3**expoente)))*((-1) ** e))
	expoente = expoente + 1
	e = e + 1
	cont = cont + 1
	num = num + 2
	print(round(num, 8))
	
	
-- OUTPUT:
3
5
7
9
11
13
15
17
19
21
23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:57:17) 
-- CODE:
from math import * 
n = int(input("Numero de vezes:"))

r = sqrt(12)
cont = 0
soma = 0
e = 2 #expoente do menos 1#
expoente = 0 #expoente do quociente#
num = 1 #número da equação que vai variar com mais 2#

while(cont<n):
	pi = r + soma
	soma = soma + ((1/(num*((3**expoente)))*((-1) ** e))
	expoente = expoente + 1
	e = e + 1
	cont = cont + 1
	num = num + 2
	print(round(num, 8))
	
	
-- ERROR:
File "XXXX", line 14
    expoente = expoente + 1
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:57:24) 
-- CODE:
from math import * 
n = int(input("Numero de vezes:"))

r = sqrt(12)
cont = 0
soma = 0
e = 2 #expoente do menos 1#
expoente = 0 #expoente do quociente#
num = 1 #número da equação que vai variar com mais 2#

while(cont<n):
	pi = r + soma
	soma = soma + ((1/(num*((3**expoente)))*((-1) ** e))
	expoente = expoente + 1
	e = e + 1
	cont = cont + 1
	num = num + 2
	print(round(num, 8))
	
	
-- ERROR:
File "XXXX", line 14
    expoente = expoente + 1
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:58:01) 
-- CODE:
from math import * 
n = int(input("Numero de vezes:"))

r = sqrt(12)
cont = 0
soma = 0
e = 2 #expoente do menos 1#
expoente = 0 #expoente do quociente#
num = 1 #número da equação que vai variar com mais 2#

while(cont<n):
	pi = r + soma
	soma = soma + ((1/(num*(3**expoente)))*((-1) ** e))
	expoente = expoente + 1
	e = e + 1
	cont = cont + 1
	num = num + 2
	print(round(num, 8))
	
	
-- OUTPUT:
3
5
7
9
11
13
15
17
19
21
23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:58:16) 
-- CODE:
from math import * 
n = int(input("Numero de vezes:"))

r = sqrt(12)
cont = 0
soma = 0
e = 2 #expoente do menos 1#
expoente = 0 #expoente do quociente#
num = 1 #número da equação que vai variar com mais 2#

while(cont<n):
	pi = r + soma
	soma = soma + ((1/(num*((3**expoente))))*((-1) ** e))
	expoente = expoente + 1
	e = e + 1
	cont = cont + 1
	num = num + 2
	print(round(num, 8))
	
	
-- OUTPUT:
3
5
7
9
11
13
15
17
19
21
23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:58:38) 
-- CODE:
from math import * 
n = int(input("Numero de vezes:"))

r = sqrt(12)
cont = 0
soma = 0
e = 2 #expoente do menos 1#
expoente = 0 #expoente do quociente#
num = 1 #número da equação que vai variar com mais 2#

while(cont<n):
	pi = r + soma
	soma = soma + ((1/(num*(3**expoente)))*((-1) ** e))
	expoente = expoente + 1
	e = e + 1
	cont = cont + 1
	num = num + 2
	print(round(expoente, 8))
	
	
-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 18:02:14) 
-- CODE:
from math import * 
n = int(input("Numero de vezes:"))

r = sqrt(12)
cont = 0
soma = 0
e = 2 #expoente do menos 1#
expoente = 0 #expoente do quociente#
num = 1 #número da equação que vai variar com mais 2#

while(cont<n):
	pi = r + soma
	soma = soma + ((1/(num*(3**expoente)))*((-1) ** e))
	expoente = expoente + 1
	e = e + 1
	cont = cont + 1
	num = num + 2
	print(round(expoente, 8))
	
	
-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 18:02:21) 
-- CODE:
from math import * 
n = int(input("Numero de vezes:"))

r = sqrt(12)
cont = 0
soma = 0
e = 2 #expoente do menos 1#
expoente = 0 #expoente do quociente#
num = 1 #número da equação que vai variar com mais 2#

while(cont<n):
	pi = r + soma
	soma = soma + ((1/(num*(3**expoente)))*((-1) ** e))
	expoente = expoente + 1
	e = e + 1
	cont = cont + 1
	num = num + 2
print(round(expoente, 8))
	
	
-- OUTPUT:
11
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 18:02:44) 
-- CODE:
from math import * 
n = int(input("Numero de vezes:"))

r = sqrt(12)
cont = 0
soma = 0
e = 2 #expoente do menos 1#
expoente = 0 #expoente do quociente#
num = 1 #número da equação que vai variar com mais 2#

while(cont<n):
	pi = r + soma
	soma = soma + ((1/(num*(3**expoente)))*((-1) ** e))
	print(round(expoente, 8))
	expoente = expoente + 1
	e = e + 1
	cont = cont + 1
	num = num + 2

	
	
-- OUTPUT:
0
1
2
3
4
5
6
7
8
9
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 18:03:02) 
-- CODE:
from math import * 
n = int(input("Numero de vezes:"))

r = sqrt(12)
cont = 0
soma = 0
e = 2 #expoente do menos 1#
expoente = 0 #expoente do quociente#
num = 1 #número da equação que vai variar com mais 2#

while(cont<n):
	pi = r + soma
	soma = soma + ((1/(num*(3**expoente)))*((-1) ** e))
	expoente = expoente + 1
	e = e + 1
	cont = cont + 1
	num = num + 2
print(round(pi, 8))
	
	
-- OUTPUT:
4.37100068
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 18:03:12) 
-- CODE:
from math import * 
n = int(input("Numero de vezes:"))

r = sqrt(12)
cont = 0
soma = 0
e = 2 #expoente do menos 1#
expoente = 0 #expoente do quociente#
num = 1 #número da equação que vai variar com mais 2#

while(cont<n):
	pi = r + soma
	soma = soma + ((1/(num*(3**expoente)))*((-1) ** e))
	expoente = expoente + 1
	e = e + 1
	cont = cont + 1
	num = num + 2
print(round(pi, 8))
	
	
-- EXECUTION TIME:
0.159833
-- TEST CASE 1:
---- input:
11
---- correct output:
3.1415933
---- user output:
4.37100068
-- TEST CASE 2:
---- input:
15
---- correct output:
3.14159266
---- user output:
4.37100129
-- TEST CASE 3:
---- input:
8
---- correct output:
3.14156872
---- user output:
4.37102487
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 18:03:12) 
-- CODE:
from math import * 
n = int(input("Numero de vezes:"))

r = sqrt(12)
cont = 0
soma = 0
e = 2 #expoente do menos 1#
expoente = 0 #expoente do quociente#
num = 1 #número da equação que vai variar com mais 2#

while(cont<n):
	pi = r + soma
	soma = soma + ((1/(num*(3**expoente)))*((-1) ** e))
	expoente = expoente + 1
	e = e + 1
	cont = cont + 1
	num = num + 2
print(round(pi, 8))
	
	
-- OUTPUT:
4.37100068
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 18:03:31) 
-- CODE:
from math import * 
n = int(input("Numero de vezes:"))

r = sqrt(12)
cont = 0
soma = 0
e = 2 #expoente do menos 1#
expoente = 0 #expoente do quociente#
num = 1 #número da equação que vai variar com mais 2#

while(cont<n):
	soma = soma + ((1/(num*(3**expoente)))*((-1) ** e))
	expoente = expoente + 1
	e = e + 1
	cont = cont + 1
	num = num + 2
	pi = r + soma
print(round(pi, 8))
	
	
-- OUTPUT:
4.37100149
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 18:03:43) 
-- CODE:
from math import * 
n = int(input("Numero de vezes:"))

r = sqrt(12)
cont = 0
soma = 0
e = 2 #expoente do menos 1#
expoente = 0 #expoente do quociente#
num = 1 #número da equação que vai variar com mais 2#

while(cont<n):
	pi = r + soma
	soma = soma + ((1/(num*(3**expoente)))*((-1) ** e))
	expoente = expoente + 1
	e = e + 1
	cont = cont + 1
	num = num + 2
print(round(pi, 8))
	
	
-- OUTPUT:
4.37100068
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 18:03:59) 
-- CODE:
from math import * 
n = int(input("Numero de vezes:"))

r = sqrt(12)
cont = 0
soma = 0
e = 2 #expoente do menos 1#
expoente = 0 #expoente do quociente#
num = 1 #número da equação que vai variar com mais 2#

while(cont<n):
	pi = r + soma
	soma = soma + ((1/(num*(3**expoente)))*((-1) ** e))
	expoente = expoente + 1
	e = e + 1
	cont = cont + 1
	num = num + 2
print(round(r, 8))
	
	
-- OUTPUT:
3.46410162
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 18:04:03) 
-- CODE:
from math import * 
n = int(input("Numero de vezes:"))

r = sqrt(12)
cont = 0
soma = 0
e = 2 #expoente do menos 1#
expoente = 0 #expoente do quociente#
num = 1 #número da equação que vai variar com mais 2#

while(cont<n):
	pi = r + soma
	soma = soma + ((1/(num*(3**expoente)))*((-1) ** e))
	expoente = expoente + 1
	e = e + 1
	cont = cont + 1
	num = num + 2
print(round(r, 8))
	
	
-- OUTPUT:
3.46410162
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 18:04:29) 
-- CODE:
from math import * 
n = int(input("Numero de vezes:"))

r = sqrt(12)
cont = 0
soma = 0
e = 2 #expoente do menos 1#
expoente = 0 #expoente do quociente#
num = 1 #número da equação que vai variar com mais 2#

while(cont<n):
	pi = sqrt(12) + soma
	soma = soma + ((1/(num*(3**expoente)))*((-1) ** e))
	expoente = expoente + 1
	e = e + 1
	cont = cont + 1
	num = num + 2
print(round(pi, 8))
	
	
-- OUTPUT:
4.37100068
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 18:04:33) 
-- CODE:
from math import * 
n = int(input("Numero de vezes:"))

r = sqrt(12)
cont = 0
soma = 0
e = 2 #expoente do menos 1#
expoente = 0 #expoente do quociente#
num = 1 #número da equação que vai variar com mais 2#

while(cont<n):
	pi = sqrt(12) + soma
	soma = soma + ((1/(num*(3**expoente)))*((-1) ** e))
	expoente = expoente + 1
	e = e + 1
	cont = cont + 1
	num = num + 2
print(round(pi, 8))
	
	
-- OUTPUT:
4.37100068
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 19:27:22) 
-- CODE:
from math import * 
n = int(input("Numero de vezes:"))

r = sqrt(12)
cont = 0
soma = 0
e = 2 #expoente do menos 1#
expoente = 0 #expoente do quociente#
num = 1 #número da equação que vai variar com mais 2#

while(cont<n):
	pi = sqrt(12) * soma
	soma = soma + ((1/(num*(3**expoente)))*((-1) ** e))
	expoente = expoente + 1
	e = e + 1
	cont = cont + 1
	num = num + 2
print(round(pi, 8))
	
	
-- OUTPUT:
3.14159051
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 19:27:25) 
-- CODE:
from math import * 
n = int(input("Numero de vezes:"))

r = sqrt(12)
cont = 0
soma = 0
e = 2 #expoente do menos 1#
expoente = 0 #expoente do quociente#
num = 1 #número da equação que vai variar com mais 2#

while(cont<n):
	pi = sqrt(12) * soma
	soma = soma + ((1/(num*(3**expoente)))*((-1) ** e))
	expoente = expoente + 1
	e = e + 1
	cont = cont + 1
	num = num + 2
print(round(pi, 8))
	
	
-- OUTPUT:
3.14159051
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 19:27:31) 
-- CODE:
from math import * 
n = int(input("Numero de vezes:"))

r = sqrt(12)
cont = 0
soma = 0
e = 2 #expoente do menos 1#
expoente = 0 #expoente do quociente#
num = 1 #número da equação que vai variar com mais 2#

while(cont<n):
	pi = sqrt(12) * soma
	soma = soma + ((1/(num*(3**expoente)))*((-1) ** e))
	expoente = expoente + 1
	e = e + 1
	cont = cont + 1
	num = num + 2
print(round(pi, 8))
	
	
-- OUTPUT:
3.14159051
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 19:27:35) 
-- CODE:
from math import * 
n = int(input("Numero de vezes:"))

r = sqrt(12)
cont = 0
soma = 0
e = 2 #expoente do menos 1#
expoente = 0 #expoente do quociente#
num = 1 #número da equação que vai variar com mais 2#

while(cont<n):
	pi = sqrt(12) * soma
	soma = soma + ((1/(num*(3**expoente)))*((-1) ** e))
	expoente = expoente + 1
	e = e + 1
	cont = cont + 1
	num = num + 2
print(round(pi, 8))
	
	
-- OUTPUT:
3.14159051
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 19:27:40) 
-- CODE:
from math import * 
n = int(input("Numero de vezes:"))

r = sqrt(12)
cont = 0
soma = 0
e = 2 #expoente do menos 1#
expoente = 0 #expoente do quociente#
num = 1 #número da equação que vai variar com mais 2#

while(cont<n):
	pi = sqrt(12) * soma
	soma = soma + ((1/(num*(3**expoente)))*((-1) ** e))
	expoente = expoente + 1
	e = e + 1
	cont = cont + 1
	num = num + 2
print(round(pi, 8))
	
	
-- OUTPUT:
3.14159051
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 19:28:00) 
-- CODE:
from math import * 
n = int(input("Numero de vezes:"))

r = sqrt(12)
cont = 0
soma = 0
e = 2 #expoente do menos 1#
expoente = 0 #expoente do quociente#
num = 1 #número da equação que vai variar com mais 2#

while(cont<n):
	pi = sqrt(12) * soma
	soma = soma + ((1/(num*(3**expoente)))*((-1) ** e))
	expoente = expoente + 1
	e = e + 1
	cont = cont + 1
	num = num + 2
print(round(pi, 8))
	
	
-- OUTPUT:
3.14159051
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 19:28:38) 
-- CODE:
from math import * 
n = int(input("Numero de vezes:"))

r = sqrt(12)
cont = 0
soma = 0
e = 2 #expoente do menos 1#
expoente = 0 #expoente do quociente#
num = 1 #número da equação que vai variar com mais 2#

while(cont<n):
	pi = sqrt(12) * soma
	soma = soma + ((1/(num*(3**expoente)))*((-1) ** e))
	expoente = expoente + 1
	e = e + 1
	cont = cont + 1
	num = num + 2
print(round(pi, 8))
	
	
-- EXECUTION TIME:
0.156104
-- TEST CASE 1:
---- input:
11
---- correct output:
3.1415933
---- user output:
3.14159051
-- TEST CASE 2:
---- input:
15
---- correct output:
3.14159266
---- user output:
3.14159263
-- TEST CASE 3:
---- input:
8
---- correct output:
3.14156872
---- user output:
3.14167431
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 19:28:52) 
-- CODE:
from math import * 
n = int(input("Numero de vezes:"))

r = sqrt(12)
cont = 1
soma = 0
e = 2 #expoente do menos 1#
expoente = 0 #expoente do quociente#
num = 1 #número da equação que vai variar com mais 2#

while(cont<n):
	pi = sqrt(12) * soma
	soma = soma + ((1/(num*(3**expoente)))*((-1) ** e))
	expoente = expoente + 1
	e = e + 1
	cont = cont + 1
	num = num + 2
print(round(pi, 8))
	
	
-- OUTPUT:
3.14159977
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 19:29:24) 
-- CODE:
from math import * 
n = int(input("Numero de vezes:"))

r = sqrt(12)
cont = 0
soma = 0
e = 2 #expoente do menos 1#
expoente = 0 #expoente do quociente#
num = 1 #número da equação que vai variar com mais 2#

while(cont<n):
	
	soma = soma + ((1/(num*(3**expoente)))*((-1) ** e))
	expoente = expoente + 1
	e = e + 1
	cont = cont + 1
	num = num + 2
	pi = sqrt(12) * soma
print(round(pi, 8))
	
	
-- OUTPUT:
3.1415933
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 19:29:28) 
-- CODE:
from math import * 
n = int(input("Numero de vezes:"))

r = sqrt(12)
cont = 0
soma = 0
e = 2 #expoente do menos 1#
expoente = 0 #expoente do quociente#
num = 1 #número da equação que vai variar com mais 2#

while(cont<n):
	
	soma = soma + ((1/(num*(3**expoente)))*((-1) ** e))
	expoente = expoente + 1
	e = e + 1
	cont = cont + 1
	num = num + 2
	pi = sqrt(12) * soma
print(round(pi, 8))
	
	
-- OUTPUT:
3.1415933
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 19:29:31) 
-- CODE:
from math import * 
n = int(input("Numero de vezes:"))

r = sqrt(12)
cont = 0
soma = 0
e = 2 #expoente do menos 1#
expoente = 0 #expoente do quociente#
num = 1 #número da equação que vai variar com mais 2#

while(cont<n):
	
	soma = soma + ((1/(num*(3**expoente)))*((-1) ** e))
	expoente = expoente + 1
	e = e + 1
	cont = cont + 1
	num = num + 2
	pi = sqrt(12) * soma
print(round(pi, 8))
	
	
-- OUTPUT:
3.1415933
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 19:29:35) 
-- CODE:
from math import * 
n = int(input("Numero de vezes:"))

r = sqrt(12)
cont = 0
soma = 0
e = 2 #expoente do menos 1#
expoente = 0 #expoente do quociente#
num = 1 #número da equação que vai variar com mais 2#

while(cont<n):
	
	soma = soma + ((1/(num*(3**expoente)))*((-1) ** e))
	expoente = expoente + 1
	e = e + 1
	cont = cont + 1
	num = num + 2
	pi = sqrt(12) * soma
print(round(pi, 8))
	
	
-- EXECUTION TIME:
0.178806
-- TEST CASE 1:
---- input:
11
---- correct output:
3.1415933
---- user output:
3.1415933
-- TEST CASE 2:
---- input:
15
---- correct output:
3.14159266
---- user output:
3.14159266
-- TEST CASE 3:
---- input:
8
---- correct output:
3.14156872
---- user output:
3.14156872
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:14:29) 
-- CODE:
from math import * 
n = int(input("Numero de vezes:"))

r = sqrt(12)
cont = 0
soma = 0
e = 2 #expoente do menos 1#
expoente = 0 #expoente do quociente#
num = 1 #número da equação que vai variar com mais 2#

while(cont<n):
	
	soma = soma + ((1/(num*(3**expoente)))*((-1) ** e))
	expoente = expoente + 1
	e = e + 1
	cont = cont + 1
	num = num + 2
	pi = sqrt(12) * soma
print(round(pi, 8))
	
	
-- OUTPUT:
3.1415933
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
